--- a/main.html
+++ b/main.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
   <body>
+	  <form>
+	  <h3 id="url"> https://localhost:8080/</h3>
+	  <label for="name">Name</label><br>
+	  <input type="text" id="name" name="name"><br><br>
+	  <label for="year">Year</label><br>
+	  <input type="year" id="year" name="year"><br><br>
+	  <input type="button" id="button" value="submit">
+	  </form>
     <script type="text/javascript" src="./script.js">
 </script>
   </body>
