--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 	  <input type="text" id="name" name="name"><br><br>
 	  <label for="year">Year</label><br>
 	  <input type="year" id="year" name="year"><br><br>
-	  <input type="button" id="button" value="submit">
+	  <input type="submit" id="button" value="submit">
 	  </form>
     <script type="text/javascript" src="./script.js">
 </script>
