--- a/main.html
+++ b/main.html
@@ -7,8 +7,7 @@
 	  <input type="text" id="name" name="name"><br><br>
 	  <label for="year">Year</label><br>
 	  <input type="year" id="year" name="year"><br><br>
-	  <input type="submit" id="button" value="submit">
-	  </form>
+	  <button id="button">Submit</button>
     <script type="text/javascript" src="./script.js">
 </script>
   </body>
